--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "NjIyMTM4NDM5Njg4NTE5Njgw.GpgSoV.7etvFVQkBsBa6U-NqB_9E_D3SWHpJNBtqnCNCM",
+  "TOKEN": "",
   "TRANSCRIPTS": "1378056270791184514",
   "LOGO": "https://i.imgur.com/lmJ9Bmr.jpeg",
   "ROLE_TO_OPEN_TICKET": "1355636310194389032",
