--- a/config.json
+++ b/config.json
@@ -1,10 +1,9 @@
 {
   "TOKEN": "NjIyMTM4NDM5Njg4NTE5Njgw.GpgSoV.7etvFVQkBsBa6U-NqB_9E_D3SWHpJNBtqnCNCM",
   "TRANSCRIPTS": "1378056270791184514",
-  "LOGO": "https://i.imgur.com/lmJ9Bmr.jpeg",
-  "ROLE_TO_OPEN_TICKET": "1355636310194389032",
-  "STAFF": "1177360208704569355",
-  "TICKETCAT": "1116106881035939950",
-  "TICKETCLAIMED": "1123715092094128229",
-  "CLOSEDTICKETS": "1378053541079416844"
+  "LOGO": "https://i.imgur.com/0LhvtWz.png",
+  "STAFF": "1035194575205187595",
+  "TICKETCAT": "1380610742260207817",
+  "TICKETCLAIMED": "1380610742260207817",
+  "CLOSEDTICKETS": "1380611018056798368"
 }
